--- a/Scombroid.AspNetCore.HttpLogbook/Scombroid.AspNetCore.HttpLogbook.csproj
+++ b/Scombroid.AspNetCore.HttpLogbook/Scombroid.AspNetCore.HttpLogbook.csproj
@@ -10,6 +10,7 @@
     <PackageProjectUrl>https://github.com/scombroid/Scombroid.AspNetCore.HttpLogbook</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
