--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Scombroid.AspNetCore.HttpLogbook.DemoApp/bin/
 Scombroid.AspNetCore.HttpLogbook.DemoApp/obj/
 Scombroid.AspNetCore.HttpLogbook/bin/
 Scombroid.AspNetCore.HttpLogbook/obj/
+Scombroid.AspNetCore.HttpLogbook.Tests/bin/
+Scombroid.AspNetCore.HttpLogbook.Tests/obj/
