--- a/Scombroid.AspNetCore.HttpLogbook/Scombroid.AspNetCore.HttpLogbook.csproj
+++ b/Scombroid.AspNetCore.HttpLogbook/Scombroid.AspNetCore.HttpLogbook.csproj
@@ -10,13 +10,16 @@
     <PackageProjectUrl>https://github.com/scombroid/Scombroid.AspNetCore.HttpLogbook</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="Configurations\**" />
+    <Compile Remove="Extensions\**" />
     <EmbeddedResource Remove="Configurations\**" />
+    <EmbeddedResource Remove="Extensions\**" />
     <None Remove="Configurations\**" />
+    <None Remove="Extensions\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,11 +30,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
-    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.3.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Extensions\" />
+    <PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="2.1.3" />
   </ItemGroup>
 
 </Project>
