tidy up and options config

--- a/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
+++ b/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "HttpLogbook": {
+    "Options": {
+      "Header": true
+    },
     "Paths": {
       "*": {
         "Methods": {
