--- a/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
+++ b/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
@@ -15,11 +15,12 @@
       "*": {
         "Methods": {
           "*": {
+            "Enabled": true,
             "Request": {
-              "LogLevel": "Information"
+              "Body": false
             },
             "Response": {
-              "LogLevel": "Information"
+              "Body": false
             }
           }
         }
@@ -27,8 +28,9 @@
       "/connect/token": {
         "Methods": {
           "*": {
+            "Enabled": true,
             "Request": {
-              "LogLevel": "Trace",
+              "Body": true,
               "BodyMasks": [
                 {
                   "Pattern": "password=[^&]+",
@@ -37,7 +39,7 @@
               ]
             },
             "Response": {
-              "LogLevel": "Trace",
+              "Body": true,
               "BodyMasks": [
                 {
                   "Pattern": "\"access_token\":\"(.+?)\"",
@@ -51,11 +53,12 @@
       "/weatherforecast": {
         "Methods": {
           "*": {
+            "Enabled": true,
             "Request": {
-              "LogLevel": "Trace"
+              "Body": true
             },
             "Response": {
-              "LogLevel": "Trace"
+              "Body": true
             }
           }
         }
@@ -63,12 +66,7 @@
       "/favicon.ico": {
         "Methods": {
           "GET": {
-            "Request": {
-              "LogLevel": "None"
-            },
-            "Response": {
-              "LogLevel": "None"
-            }
+            "Enabled": false
           }
         }
       }
