--- a/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
+++ b/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
@@ -16,10 +16,13 @@
         "Methods": {
           "*": {
             "Enabled": true,
+            "QueryString": false,
             "Request": {
+              "Headers": false,
               "Body": false
             },
             "Response": {
+              "Headers": false,
               "Body": false
             }
           }
@@ -29,6 +32,7 @@
         "Methods": {
           "*": {
             "Enabled": true,
+            "QueryString": true,
             "Request": {
               "Body": true,
               "BodyMasks": [
