--- a/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
+++ b/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "HttpLogbook": {
+    "StreamBufferSize": 4096,
+    "LogLevel": "Information",
     "Options": {
       "Header": true
     },
@@ -15,7 +17,6 @@
       "*": {
         "Methods": {
           "*": {
-            "Enabled": true,
             "QueryString": false,
             "Request": {
               "Headers": false,
