--- a/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
+++ b/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
@@ -68,6 +68,19 @@
           }
         }
       },
+      "/weatherforecast/{id}": {
+        "Methods": {
+          "*": {
+            "Enabled": true,
+            "Request": {
+              "Body": true
+            },
+            "Response": {
+              "Body": true
+            }
+          }
+        }
+      },
       "/favicon.ico": {
         "Methods": {
           "GET": {
