lookup by action name then path

--- a/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
+++ b/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
@@ -88,6 +88,33 @@
           }
         }
       }
+    },
+    "Actions": {
+      "login": {
+        "Methods": {
+          "POST": {
+            "QueryString": true,
+            "Request": {
+              "Headers": true,
+              "Body": true,
+              "BodyMasks": [
+                {
+                  "Pattern": "\\\"loginName\\\"\\s*:\\s*\\\"((\\\\\\\"|[^\\\"])*)\\\"",
+                  "Replacement": "\"loginName\": \"***\""
+                },
+                {
+                  "Pattern": "\\\"password\\\"\\s*:\\s*\\\"((\\\\\\\"|[^\\\"])*)\\\"",
+                  "Replacement": "\"password\": \"***\""
+                }
+              ]
+            },
+            "Response": {
+              "Headers": true,
+              "Body": true
+            }
+          }
+        }
+      }
     }
   }
 }
