update demo app

--- a/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
+++ b/Scombroid.AspNetCore.HttpLogbook.DemoApp/appsettings.json
@@ -68,7 +68,16 @@
           }
         }
       },
-      "/weatherforecast/{id}": {
+      "/favicon.ico": {
+        "Methods": {
+          "GET": {
+            "Enabled": false
+          }
+        }
+      }
+    },
+    "Actions": {
+      "GetWeatherForecast": {
         "Methods": {
           "*": {
             "Enabled": true,
@@ -81,16 +90,7 @@
           }
         }
       },
-      "/favicon.ico": {
-        "Methods": {
-          "GET": {
-            "Enabled": false
-          }
-        }
-      }
-    },
-    "Actions": {
-      "login": {
+      "Login": {
         "Methods": {
           "POST": {
             "QueryString": true,
